[tool.poetry]
name = "boomslingers-art-test"
version = "0.1.0"
description = ""
authors = ["Stefan Uram <sterver12345@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.3"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
